css/style.css
body{
    padding-right: 15vw;
    padding-left: 15vw;
    scrollbar-width: thin;
    scrollbar-color: black white;
}


header a {
    margin-top: 30px;
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
    font-size: 4vw;
    color: black;
    padding-left: 10px;
    padding-right: 10px;
    border: 0.1vw solid black;
    border-radius: 1vw;
    font-style: normal;
}

header{
    display: flex;
    justify-content: space-between;
}

h1 {
    font-size: 4vw;
    font-family: 'Roboto', sans-serif;
}

h2 {
    font-size:3vw;
    font-family: 'Roboto', sans-serif;
    padding-left: 1.5vw;
}

h3 {
    font-size: 2.3vw;
    font-family: 'Roboto', sans-serif;
}

h4 {
    padding-left: 20px;
    font-size: 3vw;
    font-family: 'Roboto', sans-serif;    
}

.collapsible:hover, header a:hover{
    text-decoration: underline;
    font-style: italic;
    cursor: pointer;
}

.section {
    border: 0.2vw solid black;
    border-radius: 1vw;
    margin-bottom: 6vh;
}

.content {
    display: block;
}


p{
    font-size: 5vw; 
    font-family: 'Roboto', sans-serif;   
}

a {
    font-style: italic;
    color: black;
    font-size:3.4vw;
}




.explanation {
    font-size:3.4vw;
}




.smalltext {
    font-size: 2vw;
    font-family: 'Fira Code', monospace;
}

.helper {
    height: 8vw;
    width: 8vw;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    border-radius: 1vw;
}

.helper:hover{
    outline: 0.1vw solid black;
}

.helper.toggle{
    outline: 0.1vw solid black;
}


#temp{
    width: 100%;
    display: flex;
    justify-content: center;
    margin-top: 2vw;
}

.tempinput{
    width: 100%;
    font-size: 2vw;
    border: 0.1vw solid black;
    border-radius: 1vw;
    padding-left: 2vw;
    outline:none;
    margin-right: 1vw;
}

.tempinput:focus {
    outline: 0.3vw solid black;    
}

.tempbutton{
    width: 16vw;
    height: 6vw;
    font-size: 2vw;
}

.tempbutton {
    cursor:pointer;
    background-color: white;
    border: 0.1vw solid black;
    border-radius: 1vw;

}

.formula{
    border: 0.1vw solid black;
    padding: 5vw;
    border-radius: 1vw;
    margin-bottom: 6vw;
    margin-top 4vw;
    margin-right: 5vw;
    margin-left: 5vw; 
}

.varcontainer{
    display: flex;
    justify-content: space-around; 
}

.active {
    display: none;
}

/* .collapsible:after { */
/*     content: '\02795'; /\* Unicode character for "plus" sign (+) *\/ */
/*     font-family: 'Roboto', sans-serif;   	 */
/*     font-size: 3vw; */
/*     color: black; */
/*     float: right; */
/*     padding-right: 1vw; */
/* } */

/* .active:after { */
/*   content: "\2796"; /\* Unicode character for "minus" sign (-) *\/ */
/* } */
 



::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    font-size: 1.7vw;
}
::-moz-placeholder { /* Firefox 19+ */
    font-size: 1.7vw;
}
:-ms-input-placeholder { /* IE 10+ */
    font-size: 1.7vw;
}
:-moz-placeholder { /* Firefox 18- */
    font-size: 1.7vw;
}

footer {
    padding-top: 100px;
    text-align:center;
    
}
footer p {
    font-family: 'Fira Code', monospace;
    font-size: 1.3vw;
}

